feat: add new style and favicon

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
  
 
-@layer base {
+/* @layer base {
   :root {
     --background: 0 0% 100%;
     --foreground: 240 19% 16%;
@@ -38,6 +38,54 @@
     --primary: 8 99% 67%;
     --primary-foreground: 300 0% 100%;
     --secondary: 240 19% 16%;
+    --secondary-foreground: 300 0% 100%;
+    --tertiary: 237 22% 20%;
+    --muted: 12 6.5% 15.1%;
+    --muted-foreground: 237 13% 63%;
+    --accent: 240 19% 16%;
+    --accent-foreground: 300 0% 100%;
+    --destructive: 0 72.2% 50.6%;
+    --destructive-foreground: 60 9.1% 97.8%;
+    --border: 237 22% 23%;
+    --input: 237 22% 23%;
+    --ring: 8 99% 67%;
+  }
+} */
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 260 28% 51%;
+    --card: 260 28% 51%;
+    --card-foreground: 260 28% 51%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 20 14.3% 4.1%;
+    --primary: 182 46% 58%;
+    --primary-foreground: 300 0% 100%;
+    --secondary: 260 28% 51%;
+    --secondary-foreground: 300 0% 100%;
+    --tertiary: 27 82% 98%;
+    --muted: 60 4.8% 95.9%;
+    --muted-foreground: 237 13% 40%;
+    --accent: 237 9% 96%;
+    --accent-foreground: 24 9.8% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 60 9.1% 97.8%;
+    --border: 260 28% 51%;
+    --input: 260 28% 51%;
+    --ring: 9 99% 67%;
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 237 22% 20%;
+    --foreground: 60 9.1% 97.8%;
+    --card: 240 19% 16%;
+    --card-foreground: 300 0% 100%;
+    --popover: 20 14.3% 4.1%;
+    --popover-foreground: 60 9.1% 97.8%;
+    --primary: 182 46% 58%;
+    --primary-foreground: 300 0% 100%;
+    --secondary: 260 28% 51%;
     --secondary-foreground: 300 0% 100%;
     --tertiary: 237 22% 20%;
     --muted: 12 6.5% 15.1%;
